--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "font-awesome": "^4.7.0",
-    "moment": "^2.24.0",
+    "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.24.6",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
