--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-big-calendar": "^0.24.6",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
