--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-big-calendar": "^0.24.6",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.14",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
